kubernetes/wordpress/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: default
spec:
  selector:
    app: wordpress
  ports:
  - name: http
    targetPort: 80
    port: 80
