kubernetes/wordpress/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.wordpress.local.probarra.xyz`)
      kind: Rule
      services:
        - name: wordpress
          port: 80
    - match: Host(`wordpress.local.probarra.xyz`)
      kind: Rule
      services:
        - name: wordpress
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: #Your secret name for tls
